fix 게시글 overflow

--- a/public/css/community/commun_view.css
+++ b/public/css/community/commun_view.css
@@ -77,6 +77,7 @@ button{
     position: relative;
     /* margin-top: 15px; */
     margin-left: 10%;
+    overflow: auto;
 }
 
 .categoryTitle{
